--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "browserstack-local": "^1.3.7",
-    "nightwatch": "^1.3.2"
+    "nightwatch": "^1.3.2",
+    "node-random-name": "^1.0.1"
   },
   "license": "MIT"
 }
