--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "dependencies": {
     "browserstack-local": "^1.3.7",
-    "nightwatch": "^1.3.2",
     "node-random-name": "^1.0.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chromedriver": "^79.0.0",
+    "geckodriver": "^1.19.1",
+    "nightwatch": "^1.3.2"
+  }
 }
