--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "url": "https://github.com/browserstack/nightwatch-browserstack"
   },
   "dependencies": {
-    "browserstack-local": "^1.3.7",
-    "node-random-name": "^1.0.1"
+    "browserstack-local": "^1.4.5",
+    "node-random-name": "^1.0.1",
+    "selenium-webdriver": "^4.0.0-alpha.7"
   },
   "license": "MIT",
   "devDependencies": {
-    "chromedriver": "^79.0.0",
+    "chromedriver": "^79.0.3",
     "geckodriver": "^1.19.1",
-    "nightwatch": "^1.3.2"
+    "nightwatch": "^1.3.6"
   }
 }
