--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm test
+            - run: ./node_modules/.bin/nightwatch -c conf/core_regression.conf.js
 workflows:
     build-and-test:
       jobs:
