--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@percy/nightwatch": "^1.1.0",
     "chromedriver": "^79.0.3",
     "geckodriver": "^1.19.1",
     "nightwatch": "^1.3.6"
